--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,27 +11,31 @@
 
 .sign-up-btn {
   color: #2A422C;
-  position: absolute;
+  // position: absolute;
 width: 288px;
 height: 47px;
-left: 41px;
-top: 397px;
+// left: 41px;
+// top: 397px;
 background: linear-gradient(90deg, #4BC999 99.99%, #1E3E29 100%);
 border-radius: 20px;
 color:white;
 padding-top: 10px;
+display: block;
+margin: 20px auto
 }
 
 .sign-in-btn {
-  position: absolute;
+  // position: absolute;
 width: 288px;
 height: 47px;
-left: 41px;
-top: 467px;
+// left: 41px;
+// top: 467px;
 background: linear-gradient(90deg, #FFC739 74.73%, #FFC739 99.99%, #234830 100%);
 border-radius: 20px;
 color: white;
 padding-top: 10px;
+display: block;
+margin: 20px auto
 
 }
 
@@ -42,7 +46,7 @@ padding-top: 10px;
 }
 
 .mainlogo{
-  width: 100%;
+  // width: 100%;
   object-fit: cover;
   margin-top: 62px;
   margin-left: 15px;
@@ -178,7 +182,7 @@ h5{
 }
 
 .mainlogo2{
-  width: 100%;
+  // width: 100%;
   object-fit: cover;
   margin: 100px 0 25px 0;
   // padding: 10px;
@@ -247,10 +251,8 @@ h2{
   overflow: hidden;
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 10px auto;
+  max-width: 800px;
   border-radius: 15px;
 }
 
