--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -3,10 +3,42 @@
     <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
     <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
   </ul>
+
+<div>
+<% @products.each do |product| %>
+  <div class="box">
+    <div class="images"><%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %></div>
+      <div class="text"><p><%= link_to product.name, product_path(product)%></p> </div>
+      <% if product&.fully_recyclability.round == 100 %>
+      <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
+        <i class="far fa-check-circle"></i> </div>
+      <% elsif product&.fully_recyclability.round == 0 %>
+       <div style="font-size: 30px; color: red; padding-top: 7px; padding-right: 7px;">
+        <i class="fas fa-exclamation-circle"></i></div>
+      <%else%>
+      <div style="font-size: 30px; color: orange; padding-top: 7px; padding-right: 7px;">
+        <i class="fas fa-exclamation-circle"></i></div>
+        <%end%>
+  </div>
+  <% end %>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="dashboard-content">
   <p>Welcome back!</p>
   <div class= "newproduct3">
-  <p><%= link_to "List a new product", new_product_path %> </p>
+  <p><%= link_to "Add a new product", new_product_path %></p>
   </div>
 </div>
 </div>
