--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -87,6 +87,12 @@ font-family: Roboto;
   margin: 35px;
   border-radius: 15px;
   margin-top: 30px;
+  margin:auto;
+  width: 600px;
+}
+
+.form-inputs p {
+  text-align:left;
 }
 
 .form-actions{
