--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,18 +1,28 @@
 <div class="container-index">
-<ul class= "navbar-recyclable"> 
-  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "New search", user_path(current_user) %></li>
-  <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
+<ul class= "navbar-recyclable">
+  <li style="padding-top: 12px; padding-right: 10px;">
+   <!--  <%= link_to "New search", user_path(current_user) %></li> -->
+  <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li>
   </ul>
 
-<div class="form">
+
+
+ <div class="form-style-9">
   <%= simple_form_for [@product] do |f| %>
-    <%= f.input :name %>
-    <%= f.input :category, collection: Product.pluck(:category).uniq %>
+  <ul>
+    <li>
+    <%= f.input :name, class: "field-style field-split align-left" %>
+    <%= f.input :category, collection: Product.pluck(:category).uniq, class: "" %>
     <%= f.input :photo %>
     <%= f.association :materials, multiple: true, collection: Material.all.map { |m| [ "#{m.name} - #{m.category}", m.id ] } %>
     <%= f.submit "Add Product" %>
-  <% end %>
-  <%= link_to "back", user_path(current_user) %>
+
+    </li>
+  </ul>
+
+    <% end %>
+    <%= link_to "back", user_path(current_user) %>
+
 </div>
-</div>
+
 
