--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -20,8 +20,9 @@
             <%= submit_tag "Search", class: "btn btn-primary" %>
           </div>
         <% end %>
-
       </div>
+
     </div>
   </div>
+ <p><%= link_to "back", root_path(current_user)  %></p>
 </div>
