Delete and update for producer path

--- a/app/assets/stylesheets/pages/_producer_show.scss
+++ b/app/assets/stylesheets/pages/_producer_show.scss
@@ -1,3 +1,18 @@
 .dashboard-content {
-    margin-top: 30px;
+    margin-top: 100px;
+}
+
+.card-action-buttons {
+    display: flex;
+    justify-content: end;
+}
+
+.box-cards {
+  display: flex;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  margin: 10px auto;
+  max-width: 800px;
+  border-radius: 15px;
 }
