--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,25 @@
+
+<div class="input">
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+
     <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" } %>
-  </div>
 
-  <div class="form-actions">
+
+
     <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
+     <p><%= link_to "back", new_user_session_path(current_user)  %></p>
+
+     <p><%= render "devise/shared/links" %></p>
+
+
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+</div>
