--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,7 +36,7 @@
   <% else %>
 
     <h2>
-      Sorry no product for <%= params[:query].upcase %> !
+      Sorry no product found for !
     </h2>
 
 <% end %>
