--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -5,18 +5,14 @@
     <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li>
   </ul>
 
-
-
-
-
 <div class="dashboard-content">
 <p>My products</p>
 <% @products.each do |product| %>
   <div class="box-cards">
-    <div class="images"><%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %></div>
-      <div><div class="text"><p><%= link_to product.name, product_path(product)%></p> </div>
+    <div class="image-cards"><%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %></div>
+      <div><div class="text-cards"><%= link_to product.name, product_path(product)%></div>
       <div class="card-action-buttons">
-        <div><%= link_to "Delete", product_path(product), method: :delete%></div>|<div><%= link_to "Update", edit_product_path(product)%></div>
+        <div><%= link_to "<i class='fas fa-trash'></i>".html_safe, product_path(product), method: :delete, data: { confirm: "Are you sure?" } %></div>|<div><%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_product_path(product)%></div>
       </div> 
       </div> 
       <% if product&.fully_recyclability.round == 100 %>
