--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -6,7 +6,7 @@
 <div class="container-index">
 <ul class= "navbar-recyclable"> 
 <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
-<li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li> 
+<li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li>
   </ul>
 
   <div class="heading5" style="padding-top: 65px;">
