--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,7 +2,7 @@
 <ul class= "navbar-recyclable">
   <li style="padding-top: 12px; padding-right: 10px;">
    <!--  <%= link_to "New search", user_path(current_user) %></li> -->
-  <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li>
+  <li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li>
   </ul>
 
 
