--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,7 @@
 
 <ul class= "navbar-recyclable">
   <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Add another Item", new_product_path(current_user) %></li>
-  <li><%= image_tag 'main-logo.png', class: "logo-navbar"%></li>
+  <li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li>
   </ul>
 <div class="search-result-card" style="margin-top: 80px;">
   <% if @product.photo.attached? %>
