chnaged back button to log-out button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,11 @@
     Let's sort it out!
     </p>
 
-    <%= link_to "Sign up", new_user_registration_path, class: "btn sign-up-btn"%>
-    <%= link_to "Sign in", new_user_session_path, class: "btn sign-in-btn" %>
-    <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete, class: "btn sign-in-btn"%>
+    <% if !user_signed_in? %>
+      <%= link_to "Sign up", new_user_registration_path, class: "btn sign-up-btn"%>
+      <%= link_to "Sign in", new_user_session_path, class: "btn sign-in-btn" %>
+    <% else  %>
+        <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete, class: "btn sign-in-btn"%>
+    <% end %>
   </div>
 </div>
