--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -24,5 +24,5 @@
 
     </div>
   </div>
- <p><%= link_to "back", root_path(current_user)  %></p>
-</div>
+ <p><%= link_to "Sign out", destroy_user_session_path, method: :delete %></p>
+
