--- a/app/assets/stylesheets/pages/_producer_show.scss
+++ b/app/assets/stylesheets/pages/_producer_show.scss
@@ -28,3 +28,14 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.add-product-button {
+  color: white;
+  text-decoration: none;
+  background-color: #1edd88;
+  padding: 10px;
+  border-radius: 20px;
+  margin-left: 68px;
+  margin-right: 68px;
+  margin-top: 20px;
+}
