--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -30,7 +30,7 @@
 </div>
 
 
-  <p><%= link_to "Add a new product", new_product_path %></p>
+  <div><%= link_to "Add a new product", new_product_path, class:"add-product-button" %></div>
 </div>
 </div>
 
