navbar on consumer dashboard

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,4 +4,5 @@
 @import "result";
 @import "show-page";
 @import "products_new";
-@import "producer_show"
+@import "producer_show";
+@import "consumer_show";
