--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,11 +11,13 @@
   font-size: 16px;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
+  z-index: 999;
 }
 
 .logo-navbar {
-  width: 120px;
+  width: 162px;
   height: 33px;
 }
 
@@ -25,4 +27,22 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.newzi{
+padding-top: 12px;
+padding-right: 10px;
+padding-left: 10px;
+margin-bottom: -12px;
+background-color: #F9F7E8;
+border-radius: 10px 10px 0 0;
+margin-left: 13px;
+}
+
+.newzi2{
+  color:#4BC999;
+}
+
+.margin-50{
+  margin-top: 70px !important;
 }
