--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,6 @@
 // background-color: #4BC999;
 .main-container {
   height: 100vh;
-      overflow-x: hidden;
 }
 
 .sign-up-btn {
@@ -253,6 +252,16 @@ h2{
 
 
 .box {
+  display: flex;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  margin: 10px auto;
+  max-width: 800px;
+  border-radius: 15px;
+}
+
+.card-box {
   display: flex;
   overflow: hidden;
   background: white;
