--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -6,9 +6,33 @@
     <li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li>
   </ul>
 
+
   <div class="search-container">
+  <h1>My favourites</h1>
+    <% @user.favorites.each do |favorite|%>
+      <div class="card-box">
+        <div class="images"> <%= cl_image_tag favorite.product.photo.key, height: 100, width: 100, crop: :fill %></div>
+        <div class="text"><p> <%= link_to favorite.product.name, product_path(favorite)%></p></div>
+          <% if favorite.product&.fully_recyclability.round == 100 %>
+            <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
+              <i class="far fa-check-circle"></i>
+            </div>
+          <% elsif favorite.product&.fully_recyclability.round == 0 %>
+            <div style="font-size: 30px; color: red; padding-top: 7px; padding-right: 7px;">
+              <i class="fas fa-exclamation-circle"></i>
+            </div>
+          <%else%>
+            <div style="font-size: 30px; color: orange; padding-top: 7px; padding-right: 7px;">
+              <i class="fas fa-exclamation-circle"></i>
+            </div>
+        <%end%>
+      </div>
+    <%end%>
+
+
+
     <div class="textbox">
-     Search any item below to find out information on its recyclability
+      Search any item below to find out information on its recyclability
     </div>
     <div class="consumerheading">
      <p class="m-0"> Let's sort it out!</p>
@@ -26,7 +50,6 @@
           </div>
         <% end %>
       </div>
-
     </div>
   </div>
  <p><%= link_to "Sign out", destroy_user_session_path, method: :delete %></p>
