css changes index

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -109,7 +109,6 @@ justify-content: center;
 
 .forgotbtn{
   color:purple;
-  margin-left: 50px;
   padding-top: 10px;
   display: inline;
   text-align: center;
@@ -227,7 +226,11 @@ font-weight: bold;
 font-size: 18px;
 line-height: 21px;
 text-align: center;
-
+margin-right: 79px;
+margin-left: 77px;
+border-radius: 20px 20px 0 0;
+background-color:#ffb700;
+padding-top: 15px;
 }
 
 h2{
@@ -242,7 +245,6 @@ h2{
 .btn-primary {
     color: white;
     background-color: #4BC999;
-    border-color: #167FFB;
     border-radius: 20px;
   //   @media(min-width: 1200px) {
 
@@ -350,4 +352,8 @@ h2{
     text-align: center;
     margin-left: 14px;
     margin-right: 14px;
+}
+
+.backbton{
+  color: white;
 }
