--- a/app/assets/stylesheets/pages/_result.scss
+++ b/app/assets/stylesheets/pages/_result.scss
@@ -36,3 +36,17 @@
   position: absolute;
   right: 10px;
 }
+
+.signoutbtn{
+  background-color: #4BC999;
+  border-radius: 10px;
+  border: 1px solid white;
+  padding-top: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-top: 21px;
+}
+
+.bizi{
+  color: white;
+}
