--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -24,5 +24,6 @@
 
     </div>
   </div>
- <p><%= link_to "Sign out", destroy_user_session_path, method: :delete %></p>
-
+  <div class="signoutbtn">
+ <p><%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "bizi" %></p>
+</div>
