--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -1,6 +1,6 @@
 .container{
   text-align: center;
-  background-color: white;
+  background-color: #F9F7E8;
   padding: 0px;
 }
 
@@ -11,10 +11,6 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   margin-left: 15px;
   margin-right: 15px;
-}
-
-.text{
-  padding-top: 40px ;
 }
 
 .recyclable-message{
