--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -17,11 +17,15 @@
   background-color: white;
   margin-left: 15px;
   margin-right: 15px;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-bottom: 15px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  margin-top: 100px;
 }
 
+.product-name {
+  margin-top: 20px;
+}
 
 .tip {
   padding-top: 20px;
