--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -178,7 +178,7 @@ h5{
   border-radius: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: 30px;
+    margin: 10px 30px 0px 30px;
     text-align: center;
     font-size: 20px;
     color: #464646;
@@ -273,7 +273,7 @@ h2{
   overflow: hidden;
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  margin: 20px;
+  margin: 20px auto;
   max-width: 800px;
   border-radius: 15px;
   position: relative;
