--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -4,11 +4,7 @@
 <%
 =end%>
 <div class="container-index">
-<ul class= "navbar-recyclable"> 
-<li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back", user_path(current_user) %></li>
-<li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li>
-  </ul>
-
+<%= render "shared/navbar"%>
   <div class="heading5" style="padding-top: 65px;">
     <h5> Similar content, better packaging!<br> <%= @alternatives.count %> alternatives for you!</h5>
   </div>
