--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,24 +6,7 @@
 =end%>
 
 <div class="container-index">
-
-<ul class= "navbar-recyclable">
-  <li></li>
-  <!-- <li><%= link_to image_tag('main-logo.png'), user_path(current_user), class: "logo-navbar"%></li> -->
-  <li style="padding-top: 12px; padding-right: 10px;"><%= link_to "Back to search results", products_path(current_user) %></li>
-  </ul>
-
-<!-- <div class="search-result-card" style="margin-top: 80px;">
-  <% if @product.photo.attached? %>
-  <div class= "pic">
-    <%= cl_image_tag @product.photo.key, height: 100, width: 100, crop: :fill %>
-  <% end %>
-  </div>
-
-  <div class="product-title">
-    <h5><%= @product.name %></h5>
-  </div>
-</div> -->
+<%= render "shared/navbar"%>
 
 <div class="text">
   <div>
@@ -31,7 +14,6 @@
       <div class="recyclable-message">
         <p style="font-size: 24px;">Great news!</p>
           <div><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
-          <!-- <h5><%= @product.name %></h5> -->
           <h5 class="product-name"><%= @product.name %></h5>
         <div style="font-size: 60px; color: green">
           <i class="far fa-check-circle"></i> 
