game complete css required

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,20 +1,28 @@
-.carousel-inner {
-  background-color: black;
-  color: black;
 
-  .recyclable-message {
-    background-color: transparent;
-    color: white;
-  }
-}
-
-.carousel-control-prev {
-
-}
 
 .carousel-answer-option-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-bottom: 30px;
+
 }
+
+
+
+.carousel-inner .recyclable-message {
+  background-color:gold;
+}
+
+
+
+
+#carouselExampleIndicators{
+  max-width: 350px;
+  margin: auto;
+
+
+}
+
+ #title {
+  padding-bottom:150px;
+ }
