--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Home", "#", class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "My Dashboard", user_path(current_user), class: "nav-link" %>
+        <%= link_to "My Favorites", user_path(current_user), class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Quiz", game_products_path, class: "nav-link" %>
