--- a/app/views/shared/_navbar_producer.html.erb
+++ b/app/views/shared/_navbar_producer.html.erb
@@ -10,10 +10,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "New search", root_path(current_user), class: "nav-link" %>
+        <%= link_to "Add Product", new_product_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "My Favorites", user_path(current_user), class: "nav-link" %>
+        <%= link_to "My Products", user_path(current_user), class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Quiz", game_products_path, class: "nav-link" %>
