--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -1,11 +1,7 @@
-<!-- <ul class="navbar-recyclable">
-    <li>
-      <%= link_to "make another search", root_path(current_user)  %>
-    </li>
-    <li><%= link_to "Sign out", destroy_user_session_path(@user), method: :delete %></li>
-  </ul> -->
+
 
 <div class="container">
+<%= render "shared/navbar"%>
 
   <h1 id="title">New Game</h1>
 
