--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -7,7 +7,10 @@
 
 <div class="container">
 
-  <h1 id="title">New Game</h1>
+  <div>
+    <h1 id="title">New Game</h1>
+    <h3>Test your knowledge by guessing what items can be recycled</h3>
+  </div>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="false">
     <ol class="carousel-indicators">
