fixed favorites show page, moved logo on navbar and centered items

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,8 +14,12 @@
   z-index: 999;
 }
 
-.logo-navbar {
-  width: 162px;
+.nav-link {
+  text-align: center;
+}
+
+.nav-item {
+  width: 100% !important;
 }
 
 .logo-navbar img {
