--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -18,6 +18,19 @@
         <i class="far fa-check-circle"></i> </div>
     </div>
   <% end %>
-  <%= link_to "back to results", product_path(@product) %>
-
+    <%
+=begin%>
+ <% if @product.favorites.where(user: current_user).empty? %>
+            <%= simple_form_for [@product, Favorite.new], remote: true do |f| %>
+              <%= f.button :button, type: :submit, class: "favorite-star" do %>
+                <i class="far fa-star"></i>
+              <% end %>
+            <%end%>
+          <% else %>
+            <%= link_to favorite_path(product.favorites.find_by_user_id(current_user.id)), method: :delete, remote: true, class: "favorite-star" do %>
+              <i class="fas fa-star"></i>
+            <%end%>
+    <%end%> 
+<%
+=end%>
 </div>
