border added to game

--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -25,25 +25,8 @@
     <div class="carousel-inner">
       <% @products.each_with_index do |product, index| %>
       <% if index == 0 %>
-      <div class="carousel-item active recyclable-message">
-        <div><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %></div>
-        <h5><%= product.name %></h5>
-        <div class="carousel-answer-option-wrapper">
-          <%= content_tag "div", id: "green-answer#{index}", class: "green-answer", data: {recyclability: product.fully_recyclability} do %>
-            <div style="font-size: 45px; color: green">
-              <i class="far fa-check-circle"></i>
-            </div>
-          <% end %>
-          <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
-            <i class="fas fa-exclamation-circle"></i>
-          </div>
-         <!--  <div style="font-size: 45px; color: orange" >
-            <i class="fas fa-exclamation-circle"></i>
-          </div> -->
-        </div>
-      </div>
-      <% else %>
-        <div class="carousel-item recyclable-message">
+      <div class="carousel-item active">
+        <div class="recyclable-message">
           <div><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %></div>
           <h5><%= product.name %></h5>
           <div class="carousel-answer-option-wrapper">
@@ -55,9 +38,30 @@
             <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
               <i class="fas fa-exclamation-circle"></i>
             </div>
-            <!-- <div style="font-size: 45px; color: orange">
+           <!--  <div style="font-size: 45px; color: orange" >
               <i class="fas fa-exclamation-circle"></i>
             </div> -->
+          </div>
+        </div>
+      </div>
+      <% else %>
+        <div class="carousel-item">
+          <div class="recyclable-message">
+            <div><%= cl_image_tag product.photo.key, height: 150, width: 150, crop: :fill %></div>
+            <h5><%= product.name %></h5>
+            <div class="carousel-answer-option-wrapper">
+              <%= content_tag "div", id: "green-answer#{index}", class: "green-answer", data: {recyclability: product.fully_recyclability} do %>
+                <div style="font-size: 45px; color: green">
+                  <i class="far fa-check-circle"></i>
+                </div>
+              <% end %>
+              <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
+                <i class="fas fa-exclamation-circle"></i>
+              </div>
+              <!-- <div style="font-size: 45px; color: orange">
+                <i class="fas fa-exclamation-circle"></i>
+              </div> -->
+            </div>
           </div>
         </div>
       <% end %>
