--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,5 +1,3 @@
-
-
 .carousel-answer-option-wrapper {
   display: flex;
   flex-direction: row;
@@ -7,30 +5,23 @@
 
 }
 
-
-
 .carousel-inner .recyclable-message {
   background-color:gold;
+  height: 320px;
 }
 
-
-
-
 #carouselExampleIndicators{
-  max-width: 350px;
+  max-width: 360px;
   margin: auto;
 
 
 }
 
  #title {
-  padding:50px 30px;
- }
-
-div.carousel-item.recyclable-message.active{
-  border: 2px solid black;
+padding:50px 30px;
 }
 
-div.carousel-item.recyclable-message {
-  border: 2px solid black;
+.recyclable-message  {
+  border : 2px solid black;
+
 }
