--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -277,6 +277,7 @@ h2{
   max-width: 800px;
   border-radius: 15px;
   position: relative;
+  margin: 26px;
 }
 
 .favorite-star {
@@ -331,13 +332,13 @@ h2{
   border: none;
   border-radius: 15px;
   font-size: 24px;
-  background-color: transparent;
   margin-top: 15px;
   margin-bottom: 15px;
   margin-left: 15px;
   margin-right: 15px;
   padding-top: 10px;
   padding-bottom: 5px;
+  padding-top: 33px;
 }
 
 
