--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -3,9 +3,13 @@
 
 <div class="dashboard-content">
 <p>My products</p>
-<% @products.each do |product| %>
+<% current_user.products.each do |product| %>
   <div class="box-cards">
-    <div class="image-cards"><%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %></div>
+    <div class="image-cards">
+      <% if product.photo.attached? %>
+        <%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %>
+      <% end %>
+    </div>
       <div><div class="text-cards"><%= link_to product.name, product_path(product)%></div>
       <div class="card-action-buttons">
         <div><%= link_to "<i class='fas fa-trash'></i>".html_safe, product_path(product), method: :delete, data: { confirm: "Are you sure?" } %></div>|<div><%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_product_path(product)%></div>
