changed game page

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -5,7 +5,7 @@
 
 }
 
-.carousel-inner .recyclable-message {
+.carousel-inner .recyclable-message-game {
   background-color:gold;
   height: 320px;
 }
@@ -21,7 +21,12 @@
 padding:50px 30px;
 }
 
-.recyclable-message  {
+.recyclable-message-game  {
   border : 2px solid black;
 
+}
+
+
+.game-page{
+  padding-top: 40px;
 }
