--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -341,6 +341,10 @@ h2{
   padding-top: 33px;
 }
 
+.heading55{
+      margin-top: 40px;
+      padding-bottom: 10px;
+}
 
 .text p {
   font-size: 16px;
