--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -200,9 +200,9 @@ h5{
     width: 202px;
     height: 47px;
     color: white;
-    background: linear-gradient(90deg, #4BC999 0%, #1E3E29 100%);
+    background: #1EDD88;
     border-radius: 20px;
-    font-family: Roboto;
+    font-family: "Reem Kufi", "Helvetica", "sans-serif";
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
