fixed tabs on 50/50 show page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,14 @@
   width: 100% !important;
 }
 
+#nav-home-tab {
+  width: 50% !important;
+}
+
+#nav-profile-tab{
+  width: 50% !important;
+}
+
 .logo-navbar img {
   width: 118px;
   height: 30px;
