Remove logo producer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,17 @@
 
       <!-- Recyclable logo-->
 
- <div style="margin-top: 60px"><%= image_tag 'main-logo.png', class: 'mainlogo'%> </div>
+      <div style="margin-top: 60px">
 
+<!--  <div style="margin-top: 60px"><%= image_tag 'main-logo.png', class: 'mainlogo'%> </div>
+ -->
 
        <!-- If user signed in section logic-->
 
 
   <% if !user_signed_in? %>
+  <div style="margin-top: 60px"><%= image_tag 'main-logo.png', class: 'mainlogo'%> </div>
+
     <div class="textbox">
       Recycling can be confusing but it doesn't have to be.<br>
       Sign in and sort it out!
