--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "Quiz", game_products_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete, class: "nav-link" %>
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
       </li>
     </ul>
   </div>
