--- a/app/views/shared/_navbar_producer.html.erb
+++ b/app/views/shared/_navbar_producer.html.erb
@@ -15,7 +15,7 @@
         <%= link_to "My Products", user_path(current_user), class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Sign out", destroy_user_session_path(@user), method: :delete, class: "nav-link" %>
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
       </li>
     </ul>
   </div>
