--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -34,9 +34,9 @@
             <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
               <i class="fas fa-exclamation-circle"></i>
             </div>
-           <!--  <div style="font-size: 45px; color: orange" >
+            <div style="font-size: 45px; color: orange" class="orange-answer" >
               <i class="fas fa-exclamation-circle"></i>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
@@ -54,9 +54,9 @@
               <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
                 <i class="fas fa-exclamation-circle"></i>
               </div>
-              <!-- <div style="font-size: 45px; color: orange">
+              <div style="font-size: 45px; color: orange" class="orange-answer">
                 <i class="fas fa-exclamation-circle"></i>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
