--- a/app/views/products/alternatives.html.erb
+++ b/app/views/products/alternatives.html.erb
@@ -13,11 +13,12 @@
 
   <%@alternatives.uniq.each do |alternative| %>
 
-  <div class="box">
+  <div class="card-box">
     <div class="images"> <%= cl_image_tag alternative.photo.key, height: 100, width: 100, crop: :fill %></div>
-      <div class="text"><p> <%= link_to alternative.name, product_path(alternative)%></p></div>
       <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
-        <i class="far fa-check-circle"></i> </div>
+        <i class="far fa-check-circle"></i>
+      </div>
+      <div class="text"><p> <%= link_to alternative.name, product_path(alternative)%></p></div>
       <% if alternative.favorites.where(user: current_user).empty? %>
               <%= simple_form_for [alternative, Favorite.new], remote: true do |f| %>
                 <%= f.button :button, type: :submit, class: "favorite-star" do %>
