--- a/app/assets/stylesheets/pages/_consumer_show.scss
+++ b/app/assets/stylesheets/pages/_consumer_show.scss
@@ -1,3 +1,6 @@
 .search-container {
-    margin-top:80px;
+    margin-top:70px;
+    padding-top: 45px;
+    overflow: scroll;
+    height: 92vh;
 }
